--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="send_to_database_bt">Send</string>
     <string name="database_screen_label">Database Connection</string>
     <string name="no_action_attirbuted">No action attributed</string>
+    <string name="empty_content_msg">No content</string>
 
 </resources>
