Agora, ao cadastrar um novo usuário, todos os campos exigem dados consistentes, que depois são encaminhados para o banco de dados para uma ramificação indivedual em 'Users'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,7 @@
     <string name="database_screen_label">Database Connection</string>
     <string name="no_action_attirbuted">No action attributed</string>
     <string name="empty_content_msg">No content</string>
+    <string name="error_register_fields_content_bad">Please, done the form with consistent data</string>
+    <string name="error_confirm_password">The password fields is not equals</string>
 
 </resources>
