--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="error_register_fields_content_bad">Please, done the form with consistent data</string>
     <string name="error_confirm_password">The password fields is not equals</string>
     <string name="title_activity_espaco_flexivel">EspacoFlexivelActivity</string>
+    <string name="make_hideable">Toggle Hideable</string>
 
 </resources>
