*Implementando a capacidade de limitar o acesso a determinadas telas a partir da alteração de propriedades individuais no banco de dados.
*Implementação do padrão observer iniciada

*Manutenção quase geral do código para adequar as mudanças

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,9 @@
     <string name="transitionViewHolderActivityItemTextTime">viewHolderActivityItemTextTimeTransition</string>
     <string name="transitionViewHolderActivityItemTextAddressDescription">viewHolderActivityItemTextTransitionTransition</string>
 
+    <!--Strings para predefinir texto dos itens do recyclerview de exemplo-->
+    <string name="title_of_this_item">Title of this item</string>
+    <string name="description_of_this_item">Description of this item</string>
+    <string name="date">Date</string>
+
 </resources>
