--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,6 @@
     <string name="title_of_this_item">Title of this item</string>
     <string name="description_of_this_item">Description of this item</string>
     <string name="date">Date</string>
+    <string name="open_image_picker">Open image picker</string>
 
 </resources>
